@@ -577,6 +577,9 @@ int main (int argc, char *argv[])
 #ifdef ENABLE_NLS
   char localedir[1024];
 #endif
+# ifdef __MINGW64__
+  int _dowildcard = -1; /* enable wildcard expansion for Win64 */
+# endif
 
   progname[8] = '\0';
   strcpy(progname,"unix2dos");
