@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 5.3.3-beta1
-DOS2UNIX_VERSION_SHORT = 533b1
-DOS2UNIX_DATE = 2012-02-01
+DOS2UNIX_VERSION = 5.3.3-beta2
+DOS2UNIX_VERSION_SHORT = 533b2
+DOS2UNIX_DATE = 2012-03-07
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
